--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,11 @@
     display: flex;
     align-items: center;
 }
+.add-expense{
+    color: #979494;
+    font-family: 'Aclonica', sans-serif;
+    font-size: 20px;
+}
 .logo {
     font-family: 'Abhaya Libre ExtraBold';
     font-style: normal;
