--- a/src/index.css
+++ b/src/index.css
@@ -59,3 +59,13 @@
     margin: 0 15px;
     padding: 5px 25px;
 }
+.text-underline {
+    width: 95%;
+}
+.budget-padding {
+    margin-left: 10px;
+}
+.add-budget-button {
+    /* margin-bottom: 10px; */
+    margin: 0 10px;
+}
